Fix T81776: Sculpt line gestures not working with transformed objects

The line gesture plane should be in object space, not in world space.